Se agrego filtro de visualización de movimientos en la vista de Estado de Suministros.
Se corrigieron métodos de stream en algunos listados.
Se agregó combobox para limitar la cantidad de movimientos mostrados en la pantalla de info de cada suministro, dando la opción de ver todos o solo los de año en curso.